Fix problem where header collapse on other content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,10 @@ body {
 
 /*Heading and Logo*/
 
+header {
+    margin-bottom: 50px;
+}
+
 h1, h2, h3 {
     font-family: Poppins, sans-serif;
     text-transform: uppercase;
@@ -66,7 +70,6 @@ header a {
     border-bottom: 1px solid  #48502f;
 }
 
-
 /* Hero image */
 
 #hero-image-container {
@@ -81,7 +84,6 @@ header a {
     background: url(../images/hero-image-2.webp) no-repeat center center;
     object-fit: cover;
     margin-top: 10px;
-
 }
 
 /*styling classes*/
